--- a/countdown_timer.html
+++ b/countdown_timer.html
@@ -61,7 +61,40 @@
     </ul>
   </div>
 
-
+  <div id="countdownTimerContainer" class="countdownTimer" style="display: block;">
+    <div class="text-center mt-3" style="width: 80%; margin: 0 auto;">
+      <div class="row mb-4">
+        <div class="col">
+          <p>Hours</p>
+          <button id="upHours" style="font-size: 150%;">˄</button>
+          <p id="prevHour">99</p>
+          <input type="number" style="padding-top: 15%; padding-bottom: 15%; text-align: center; font-size: 150%;" id="hoursCount" class="form-control" 
+          placeholder="00" min="0" max="99">
+          <p id="nextHour" style="margin-top: 1rem;">01</p>
+          <button id="downHours" style="font-size: 150%;">˅</button>
+        </div>
+        <div class="col">
+          <p>Minutes</p>
+          <button id="upMinutes" style="font-size: 150%;">˄</button>
+          <p id="prevMinute">59</p>
+          <input type="number" style="padding-top: 15%; padding-bottom: 15%;  text-align: center; font-size: 150%;" id="minutesCount" class="form-control" 
+          placeholder="00" min="0" max="59">
+          <p id="nextMinute" style="margin-top: 1rem">01</p>
+          <button id="downMinutes" style="font-size: 150%;">˅</button>
+        </div>
+        <div class="col">
+          <p>Seconds</p>
+          <button id="upSeconds" style="font-size: 150%;">˄</button>
+          <p id="prevSecond">59</p>
+          <input type="number" style="padding-top: 15%; padding-bottom: 15%;  text-align: center; font-size: 150%;" id="secondsCount" class="form-control" 
+          placeholder="00" min="0" max="59">
+          <p id="nextSecond" style="margin-top: 1rem">01</p>
+          <button id="downSeconds" style="font-size: 150%;">˅</button>
+        </div>
+      </div>
+      <button id="startTimer" class="btn btn-primary mt-1" style="width: 40%;">Start</button>
+    </div>
+  </div>
   <!-- The body of your page goes here -->
 
   <!-- Our own footer goes here-->
@@ -74,6 +107,7 @@
   <script src="./scripts/firebaseAPI_TEAM05.js"></script>
   <script src="./scripts/skeleton.js"></script>
   <script src="./scripts/main.js"></script>
+  <script src="./scripts/countdownTimers.js"></script>
 
 </body>
 
