--- a/preset_timers.html
+++ b/preset_timers.html
@@ -64,19 +64,19 @@
   </div>
 
   <div id="presetTimerContainer" class="preset-timer" style="display: none;">
-    <h1 class="text-center mb-3">Create a Preset Timer</h1>
+    <h1 class="text-center">Create a Preset Timer</h1>
     <input type="text" id="presetName" class="form-control" placeholder="Preset Name" style="text-align:Center;"
       maxlength="18">
     <div class="text-center mt-3">
       <div class="row mb-4">
         <div class="col">
-          <input type="number" id="hours" class="form-control" placeholder="Hours" min="0" max="99" maxlength="2">
+          <input type="number" id="hours" class="form-control" style="text-align:Center;" placeholder="Hours" min="0" max="99">
         </div>
         <div class="col">
-          <input type="number" id="minutes" class="form-control" placeholder="Minutes" min="0" max="59" maxlength="25">
+          <input type="number" id="minutes" class="form-control" style="text-align:Center;" placeholder="Minutes" min="0" max="59">
         </div>
         <div class="col">
-          <input type="number" id="seconds" class="form-control" placeholder="Seconds" min="0" max="59" maxlength="25">
+          <input type="number" id="seconds" class="form-control" style="text-align:Center;"placeholder="Seconds" min="0" max="59">
         </div>
       </div>
       <button id="savePreset" class="btn btn-primary mt-1" style="width: 40%;">Save</button>
@@ -206,7 +206,7 @@
   <script src="./scripts/firebaseAPI_TEAM05.js"></script>
   <script src="./scripts/skeleton.js"></script>
   <script src="./scripts/main.js"></script>
-  <script src="./scripts/timers.js"></script>
+  <script src="./scripts/presetTimers.js"></script>
 
 </body>
 
