--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
 
   <div class="container mt-4">
     <div class="table-responsive">
-      <table class="table" style="text-align: center">
+      <table class="table" id = "cal" style="text-align: center">
         <thead>
           <tr>
             <th>Sun</th>
