--- a/main.html
+++ b/main.html
@@ -66,6 +66,9 @@
     </div>
   </div>
 
+  <div class="container mt-4">
+    <h2 id="currentMonth"></h2>
+  </div>
 
   <div class="container mt-4">
     <div class="table-responsive">
