--- a/main.html
+++ b/main.html
@@ -94,7 +94,7 @@
   <div class="container mt-4">
     <div class="row justify-content-center">
       <div class="col-12 col-md-6 col-lg-4">
-        <a href="schedule.html" class="btn btn-primary btn-lg w-100" role="button" aria-pressed="true">Add new event</a>
+        <a href="schedule.html" class="btn btn-primary btn-lg w-100" id = "newEventButton" role="button" aria-pressed="true">Add new event</a>
       </div>
     </div>
   </div>
